
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int Type ;
typedef int Oid ;
typedef int HeapTuple ;


 int ERROR ;
 int HeapTupleIsValid (int ) ;
 int ObjectIdGetDatum (int ) ;
 int SearchSysCache1 (int ,int ) ;
 int TYPEOID ;
 int elog (int ,char*,int ) ;

Type
typeidType(Oid id)
{
 HeapTuple tup;

 tup = SearchSysCache1(TYPEOID, ObjectIdGetDatum(id));
 if (!HeapTupleIsValid(tup))
  elog(ERROR, "cache lookup failed for type %u", id);
 return (Type) tup;
}
